W-17331120: Reuse generated dynamic classes `withAnnotations` if available
* Push the utils to add annotations down to extensions-support from core